# $Id$

2007-01-19	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Containers/UnifiedContainer.class.php: unsaved objects are not
	tracked by importList() now.

2007-01-22	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/DAOs/VoodooDaoWorker.class.php: segments are now created with
	0660 permission, instead of 0600.

2007-01-11	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/DB/ImaginaryDialect.class.php: missing toString added to
	fullTextSearch()/fullTextRank().

2007-01-08	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* 0.2.18 released.

2006-12-29	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Cache/WatermarkedPeer.class.php: fix for possible cache
	corruption backported from trunk.

2006-10-25	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/DB/MySQL.class.php: always force new link creation for
	non-persistent connections.

2006-10-21	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* 0.2.17 released.

2006-10-18	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Form/PrimitiveImage.class.php: big images' handling
	fixed.

2006-10-04	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Base/Assert.class.php: simplified isInteger-checking, succeeds
	on integer's with leading zeros now; arrived from trunk.

2006-08-23	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Cache/PeclMemcached.class.php: several stfu's from trunk.

2006-08-18	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Containers/StorableContainer.class.php: backported
	getIdsList() fix from trunk.

2006-08-08	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/DB/: now php-5.2 compatible, backported from trunk.

2006-07-21	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* 0.2.16 released.

2006-07-12	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Form/Form.class.php: getTexturalErrors() is deprecated in
	favour of getTextualErrors().

2006-06-25	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* 0.2.15 released.
