@@ -1,5 +1,10 @@
 # $Id$
 
+2007-03-20	Konstantin V. Arkhipov	<voxus@shadanakar.org>
+
+	* main/Containers/UnifiedContainer.class.php: fetched collection now
+	excluded from serialization.
+
 2007-01-19	Konstantin V. Arkhipov	<voxus@shadanakar.org>
 
 	* main/Containers/UnifiedContainer.class.php: unsaved objects are not
